Initialize gcrypt threading
GNUTLS uses gcrypt for its crypto functions. gcrypt requires
that the app/library initializes threading before using it.
We don't want to force apps using libvirt to know about
gcrypt, so we make virInitialize init threading on their
behalf. This location also ensures libvirtd has initialized
it correctly. This initialization is required even if libvirt
itself were only using one thread, since another non-libvirt
library (eg GTK-VNC) could also be using gcrypt from another
thread

* src/libvirt.c: Register thread functions for gcrypt
* configure.in: Add -lgcrypt to linker flags

--- a/configure.in
+++ b/configure.in
@@ -547,7 +547,9 @@ if test "$GNUTLS_FOUND" = "no"; then
   test $fail = 1 &&
     AC_MSG_ERROR([You must install the GnuTLS library in order to compile and run libvirt])
 
-  GNUTLS_LIBS=$LIBS
+  dnl Not all versions of gnutls include -lgcrypt, and so we add
+  dnl it explicitly for the calls to gcry_control/check_version
+  GNUTLS_LIBS="$LIBS -lgcrypt"
   LIBS="$old_libs"
 fi
 
