--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -7,6 +7,7 @@ src/console.c
 src/datatypes.c
 src/domain_conf.c
 src/interface_conf.c
+src/interface_driver.c
 src/iptables.c
 src/libvirt.c
 src/lxc_container.c
