avoid a make distcheck failure: distribute tests/interfaceschemadata/
* tests/Makefile.am (EXTRA_DIST): Add interfaceschemadata.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -53,6 +53,7 @@ EXTRA_DIST =		\
 	networkschematest \
 	domainschematest \
 	domainschemadata \
+	interfaceschemadata \
 	storagepoolschematest \
 	storagepoolschemadata \
 	storagevolschematest \
