Fix misc build problems due to new drivers
* autobuild.sh: Disable esx/phyp build on mingw32
* configure.in: Fix handling of --without-phyp so it actually works
* libvirt.spec.in: Add missing interface.rng
* mingw32-libvirt.spec.in: Disable phyp/esx drivers
* src/phyp/phyp_driver.c: Fix missing i18n of error messages

--- a/configure.in
+++ b/configure.in
@@ -190,7 +190,7 @@ AC_ARG_WITH([openvz],
 AC_ARG_WITH([libssh],
 [  --with-libssh=[PFX]       libssh location],[],[with_libssh=yes])
 AC_ARG_WITH([phyp],
-[  --with-phyp=[PFX]         add PHYP support (on)],[with_phyp=yes],[with_phyp=check])
+[  --with-phyp=[PFX]         add PHYP support (on)],[],[with_phyp=check])
 AC_ARG_WITH([vbox],
 [  --with-vbox             add VirtualBox support (on)],[],[with_vbox=yes])
 AC_ARG_WITH([lxc],
