--- a/mingw32-libvirt.spec.in
+++ b/mingw32-libvirt.spec.in
@@ -53,6 +53,8 @@ MinGW Windows libvirt virtualization library.
   --without-vbox \
   --without-openvz \
   --without-one \
+  --without-phyp \
+  --without-esx \
   --without-libvirtd
 make
 
