--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -528,6 +528,7 @@ fi
 %{_datadir}/libvirt/schemas/storagevol.rng
 %{_datadir}/libvirt/schemas/nodedev.rng
 %{_datadir}/libvirt/schemas/capability.rng
+%{_datadir}/libvirt/schemas/interface.rng
 
 %if %{with_sasl}
 %config(noreplace) %{_sysconfdir}/sasl2/libvirt.conf
