--- a/docs/sitemap.html.in
+++ b/docs/sitemap.html.in
@@ -106,6 +106,10 @@
                 <a href="formatnode.html">Node Devices</a>
                 <span>The host device XML format</span>
               </li>
+              <li>
+                <a href="formatsecret.html">Secrets</a>
+                <span>The secret XML format</span>
+              </li>
             </ul>
           </li>
           <li>
