Fix build on mingw32 by disabling netcf
* autobuild.sh, mingw32-libvirt.spec.in: Set --without-netcf for
  mingw32 builds

--- a/mingw32-libvirt.spec.in
+++ b/mingw32-libvirt.spec.in
@@ -55,6 +55,7 @@ MinGW Windows libvirt virtualization library.
   --without-one \
   --without-phyp \
   --without-esx \
+  --without-netcf \
   --without-libvirtd
 make
 
